--- a/StepTrackerAndroidApp/app/src/main/res/values/strings.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">StepTrackerAndroidApp</string>
+    <string name="action_bao_cao">"Báo cáo</string>
+    <string name="action_trang_chu">Trang chủ</string>
+    <string name="action_nguoi_dung">Người dùng</string>
 </resources>
