--- a/StepTrackerAndroidApp/app/src/main/res/values/strings.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_bao_cao">"Báo cáo</string>
     <string name="action_chi_so">Chỉ số</string>
     <string name="action_nguoi_dung">Tôi</string>
+    <string name="action_cai_dat">Cài đặt</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
